# ddon-dwarf-reconstructor

./: .env.template  .gitignore  CLAUDE.md  Makefile  README.adoc  README.md  build.sh  ideas.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: quality.yml  test.yml
docs/: ARCHITECTURE.md  CLASS_DIAGRAM.md  TESTING.md
docs/knowledge-base/: README.md  dwarf-parsing-patterns.md  pyelftools-api-reference.md  pyelftools-examples.md
docs/knowledge-base/dwarf/: ghidra-dwarf-parsing.md  llvm-dwarf-parsing.md
docs/knowledge-base/optimization/: indexing-strategy.md
docs/knowledge-base/ps4-elf/: ida-loader-insights.md  ps4-constants.md
docs/knowledge-base/pyelftools/: pyelftools-approach.md
docs/knowledge-base/tools/: dwarf2cpp-approach.md
resources/: DDOORBIS-elf-header.txt  DDOORBIS-file-header.txt  DDOORBIS-private-headers.txt  DDOORBIS-program-headers.txt  DDOORBIS-section-headers.txt  cSetInfoOm-offsets.txt  class-symbols.txt  cu_1.dwarfdump  dw-tags.txt  framework-symbols.txt  rGUI.dwarfdump  resource-symbols.txt  sample-dump-0x000034f6.dwarfdump  sample-dump-MtObject.dwarfdump  sample-dump-cSetInfoOmBreakTarget.dwarfdump  sample-ida-dump-cSetInfoOmBreakTarget.h  sample-symbols.csv  season2-resources.txt  statistics.json
resources/.cache/: DDOORBIS_dwarf_cache.json
resources/PS3/: EBOOT.ELF.objdump.allheaders.txt  EBOOT.ELF.readelf.headers.txt
resources/PS3/.cache/: EBOOT_dwarf_cache.json
src/ddon_dwarf_reconstructor/: __init__.py  __main__.py  main.py  models.py
src/ddon_dwarf_reconstructor/application/: __init__.py
src/ddon_dwarf_reconstructor/application/generators/: __init__.py  dwarf_generator.py
src/ddon_dwarf_reconstructor/config/: __init__.py  config.py  lazy_loading.py
src/ddon_dwarf_reconstructor/core/: __init__.py  die_extractor.py  dwarf_parser.py  lazy_type_resolver.py  models.py
src/ddon_dwarf_reconstructor/domain/: __init__.py
src/ddon_dwarf_reconstructor/domain/models/: __init__.py
src/ddon_dwarf_reconstructor/domain/models/dwarf/: __init__.py  class_info.py  enum_info.py  member_info.py  method_info.py  parameter_info.py  struct_info.py  tag_constants.py  tag_registry.py  template_param_info.py  union_info.py
src/ddon_dwarf_reconstructor/domain/repositories/: __init__.py
src/ddon_dwarf_reconstructor/domain/repositories/cache/: __init__.py  lru_cache.py  persistent_symbol_cache.py
src/ddon_dwarf_reconstructor/domain/services/: __init__.py  lazy_dwarf_index_service.py
src/ddon_dwarf_reconstructor/domain/services/generation/: __init__.py  dependency_extractor.py  header_generator.py  hierarchy_builder.py
src/ddon_dwarf_reconstructor/domain/services/parsing/: __init__.py  class_parser.py  die_type_classifier.py  type_chain_traverser.py  type_resolver.py
src/ddon_dwarf_reconstructor/generators/: __init__.py  base_generator.py  class_parser.py  dwarf_generator.py  header_generator.py  hierarchy_builder.py  native_generator.py  type_resolver.py
src/ddon_dwarf_reconstructor/generators/utils/: __init__.py  array_parser.py  dwarf_location_parser.py  packing_analyzer.py
src/ddon_dwarf_reconstructor/infrastructure/: __init__.py  elf_platform.py
src/ddon_dwarf_reconstructor/infrastructure/config/: __init__.py  application_config.py  dwarf_config.py
src/ddon_dwarf_reconstructor/infrastructure/logging/: __init__.py  logger_setup.py  progress_tracker.py  utils.py
src/ddon_dwarf_reconstructor/utils/: __init__.py  elf_patches.py  logger.py  path_utils.py  quick_search.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_utils.py
tests/config/: __init__.py  test_config.py
tests/core/: __init__.py  test_dwarf_core.py
tests/domain/models/dwarf/: test_tag_registry.py
tests/domain/repositories/cache/: test_persistent_symbol_cache.py
tests/domain/services/generation/: test_dependency_extractor.py
tests/generators/: __init__.py  test_class_parser.py  test_dwarf_generator.py  test_dwarf_integration.py  test_header_generation.py  test_header_generator.py  test_native_generator.py  test_type_resolver.py
tests/generators/utils/: test_dwarf_location_parser.py  test_packing_analyzer.py
tests/infrastructure/: test_elf_platform.py
tests/performance/: __init__.py  test_cu_caching.py  test_parallel_parsing.py  test_performance.py
tests/utils/: __init__.py  test_elf_patches.py  test_utilities.py
